--- a/markup/templates/markup/tasks.html
+++ b/markup/templates/markup/tasks.html
@@ -8,7 +8,7 @@
     {% for task in tasks %}
       <tr>
         <td>
-          <a href="/markup/markup?task={{ task.pk }}">
+          <a href="/markup?task={{ task.pk }}">
             {{ task.title }}
           </a>
         </td>
@@ -20,15 +20,15 @@
     {% for fixedtask in fixedtasks %}
       <tr>
         <td>
-          <a href="/markup/markupfixed?fixedtask={{ fixedtask.pk }}">
+          <a href="/markupfixed?fixedtask={{ fixedtask.pk }}">
             {{ fixedtask.title }}
           </a>
         </td>
         <td>
-          <a href="/markup/fixedtask_statistics?fixedtask={{ fixedtask.pk }}">Conflicts statistics</a>
+          <a href="/fixedtask_statistics?fixedtask={{ fixedtask.pk }}">Conflicts statistics</a>
         </td>
         <td>
-          <a href="/markup/labels?fixedtask={{ fixedtask.pk }}">All labels</a>
+          <a href="/labels?fixedtask={{ fixedtask.pk }}">All labels</a>
         </td>
       </tr>
     {% endfor %}
