--- a/markup/templates/markup/tasks.html
+++ b/markup/templates/markup/tasks.html
@@ -15,6 +15,18 @@
       </tr>
     {% endfor %}
   </table>
+  <h4>Dynamic tasks</h4>
+  <table class="table table-hover">
+    {% for task in dynamictasks %}
+      <tr>
+        <td>
+          <a href="{% url 'dynamic_markup' %}?task={{ task.pk }}">
+            {{ task.title }}
+          </a>
+        </td>
+      </tr>
+    {% endfor %}
+  </table>
   <h4>Fixed tasks</h4>
   <table class="table table-hover">
     {% for fixedtask in fixedtasks %}
